test/err.txt
vm:~/CPPnetwork/test$ make
g++ -g -O2 -Wall -W -pedantic-errors -Wmissing-braces -Wparentheses -Wold-style-cast  -std=c++11  -std=c++11 -I..  -c -o myserver.o myserver.cc
In file included from InMemoryDatabase.h:13:0,
                 from command.h:7,
                 from myserver.cc:5:
newsGroup.h:9:7: error: expected nested-name-specifier before ‘namespace’
 using namespace std;
       ^
newsGroup.h:67:14: error: ‘Article’ was not declared in this scope
  std::vector<Article> articles;
              ^
newsGroup.h:67:21: error: template argument 1 is invalid
  std::vector<Article> articles;
                     ^
newsGroup.h:67:21: error: template argument 2 is invalid
newsGroup.h: In member function ‘void NewsGroup::insertArticle(std::__cxx11::string, std::__cxx11::string, std::__cxx11::string)’:
newsGroup.h:17:3: error: ‘Article’ was not declared in this scope
   Article art = new Article(title,author,text);
   ^
newsGroup.h:18:12: error: request for member ‘push_back’ in ‘((NewsGroup*)this)->NewsGroup::articles’, which is of non-class type ‘int’
   articles.push_back(art);
            ^
newsGroup.h:18:22: error: ‘art’ was not declared in this scope
   articles.push_back(art);
                      ^
newsGroup.h: At global scope:
newsGroup.h:15:33: warning: unused parameter ‘title’ [-Wunused-parameter]
  void insertArticle(std::string title, std::string author, std::string text){
                                 ^
newsGroup.h:15:52: warning: unused parameter ‘author’ [-Wunused-parameter]
  void insertArticle(std::string title, std::string author, std::string text){
                                                    ^
newsGroup.h:15:72: warning: unused parameter ‘text’ [-Wunused-parameter]
  void insertArticle(std::string title, std::string author, std::string text){
                                                                        ^
newsGroup.h: In member function ‘bool NewsGroup::deleteArticle(const int&)’:
newsGroup.h:24:30: error: request for member ‘begin’ in ‘((NewsGroup*)this)->NewsGroup::articles’, which is of non-class type ‘int’
   auto it = find_if(articles.begin(), articles.end(), [&artId] (Article art)
                              ^
newsGroup.h:24:48: error: request for member ‘end’ in ‘((NewsGroup*)this)->NewsGroup::articles’, which is of non-class type ‘int’
   auto it = find_if(articles.begin(), articles.end(), [&artId] (Article art)
                                                ^
newsGroup.h:24:65: error: ‘Article’ has not been declared
   auto it = find_if(articles.begin(), articles.end(), [&artId] (Article art)
                                                                 ^
newsGroup.h: In lambda function:
newsGroup.h:26:15: error: request for member ‘id’ in ‘art’, which is of non-class type ‘int’
    return art.id == artId;
               ^
newsGroup.h: In member function ‘bool NewsGroup::deleteArticle(const int&)’:
newsGroup.h:27:6: error: ‘find_if’ was not declared in this scope
     });
      ^
newsGroup.h:28:21: error: request for member ‘end’ in ‘((NewsGroup*)this)->NewsGroup::articles’, which is of non-class type ‘int’
   if(it == articles.end()){
                     ^
newsGroup.h:32:12: error: request for member ‘erase’ in ‘((NewsGroup*)this)->NewsGroup::articles’, which is of non-class type ‘int’
   articles.erase(remove_if(articles.begin(), articles.end(), [&artId] (Article art)
            ^
newsGroup.h:32:37: error: request for member ‘begin’ in ‘((NewsGroup*)this)->NewsGroup::articles’, which is of non-class type ‘int’
   articles.erase(remove_if(articles.begin(), articles.end(), [&artId] (Article art)
                                     ^
newsGroup.h:32:55: error: request for member ‘end’ in ‘((NewsGroup*)this)->NewsGroup::articles’, which is of non-class type ‘int’
   articles.erase(remove_if(articles.begin(), articles.end(), [&artId] (Article art)
                                                       ^
newsGroup.h:32:72: error: ‘Article’ has not been declared
   articles.erase(remove_if(articles.begin(), articles.end(), [&artId] (Article art)
                                                                        ^
newsGroup.h: In lambda function:
newsGroup.h:34:15: error: request for member ‘id’ in ‘art’, which is of non-class type ‘int’
    return art.id == artId;
               ^
newsGroup.h: In member function ‘bool NewsGroup::deleteArticle(const int&)’:
newsGroup.h:35:6: error: ‘remove_if’ was not declared in this scope
     }));
      ^
newsGroup.h: In member function ‘std::__cxx11::string NewsGroup::getArticleString(int)’:
newsGroup.h:47:30: error: request for member ‘begin’ in ‘((NewsGroup*)this)->NewsGroup::articles’, which is of non-class type ‘int’
   auto it = find_if(articles.begin(), articles.end(), [&artId] (Article art)
                              ^
newsGroup.h:47:48: error: request for member ‘end’ in ‘((NewsGroup*)this)->NewsGroup::articles’, which is of non-class type ‘int’
   auto it = find_if(articles.begin(), articles.end(), [&artId] (Article art)
                                                ^
newsGroup.h:47:65: error: ‘Article’ has not been declared
   auto it = find_if(articles.begin(), articles.end(), [&artId] (Article art)
                                                                 ^
newsGroup.h: In lambda function:
newsGroup.h:49:15: error: request for member ‘id’ in ‘art’, which is of non-class type ‘int’
    return art.id == artId;
               ^
newsGroup.h: In member function ‘std::__cxx11::string NewsGroup::getArticleString(int)’:
newsGroup.h:50:6: error: ‘find_if’ was not declared in this scope
     });
      ^
newsGroup.h:51:21: error: request for member ‘end’ in ‘((NewsGroup*)this)->NewsGroup::articles’, which is of non-class type ‘int’
   if(it == articles.end()){
                     ^
newsGroup.h:55:80: error: expression cannot be used as a function
   std::string totalArt = "Title: " + (it -> title) + ", Author: " (it -> author) +", Text: " + 
                                                                                ^
<builtin>: recipe for target 'myserver.o' failed
make: *** [myserver.o] Error 1
vm:~/CPPnetwork/test$ 
